Fixed: Z-Index issue with quick help

--- a/src/app/css/main.css
+++ b/src/app/css/main.css
@@ -125,6 +125,9 @@ span.cm-keyword {
 .modal {
     z-index: 100000;
 }
+.modal-backdrop {
+    z-index: 10500;
+}
 
 
 #labellist ul {
